--- a/www-frontend/package.json
+++ b/www-frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.0.2",
+    "@vis.gl/react-google-maps": "^1.1.3",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
