todo avanzado, falta poder revisarlo en el celular

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -45,6 +45,8 @@ group :development, :test do
   gem 'pry-byebug'
   gem 'factory_bot_rails', '~> 6.4'
   gem 'faker', '~> 3.4'
+  gem 'rack-cors'
+
 end
 
 group :development do
