--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@hookform/resolvers": "^3.9.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "~51.0.37",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-hook-form": "^7.53.0",
+    "react-native": "0.74.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
