--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.37",
+    "axios": "^1.7.7",
+    "expo": "^51.0.37",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
