--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "^51.0.37",
+    "expo-notifications": "~0.28.19",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
