--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "^51.0.37",
+    "expo-camera": "~15.0.16",
+    "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.19",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -23,6 +25,9 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-vector-icons": "^10.2.0",
     "yup": "^1.4.0"
   },
