--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "^51.0.37",
+    "expo-av": "~14.0.7",
     "expo-camera": "~15.0.16",
     "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.19",
