--- a/backend/config/cable.yml
+++ b/backend/config/cable.yml
@@ -1,10 +1,12 @@
 development:
-  adapter: async
+  adapter: redis
+  url: redis://10.33.0.139:6379/1
+  channel_prefix: backend_development
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://10.33.0.139:6379/1" } %>
   channel_prefix: backend_production
