--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -10,30 +10,40 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@rails/actioncable": "^8.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "actioncable": "^5.2.8-1",
     "axios": "^1.7.7",
-    "expo": "^51.0.37",
-    "expo-av": "~14.0.7",
-    "expo-camera": "~15.0.16",
-    "expo-image-picker": "~15.0.7",
-    "expo-notifications": "~0.28.19",
-    "expo-secure-store": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.5",
+    "expo-image-picker": "~16.0.2",
+    "expo-notifications": "~0.29.8",
+    "expo-secure-store": "~14.0.0",
+    "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
-    "react": "18.2.0",
+    "glob": "^11.0.0",
+    "minimatch": "^3.1.2",
+    "node-forge": "^1.3.1",
+    "path-to-regexp": "^1.9.0",
+    "qs": "^6.13.1",
+    "react": "18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-native": "0.74.5",
+    "react-native": "0.76.2",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-vector-icons": "^10.2.0",
+    "uuid": "^11.0.3",
+    "xml2js": "^0.5.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-cli": "^4.0.17"
   },
   "private": true
 }
