--- a/hybrid-frontend/package.json
+++ b/hybrid-frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@rails/actioncable": "^8.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "actioncable": "^5.2.8-1",
@@ -33,6 +34,7 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.76.2",
     "react-native-elements": "^3.4.3",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
